Replaces login link with button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <header><%= link_to "log in as admin", admin_login_temp_path %></header>
+    <header><%= button_to "log in as admin", login_path %></header>
     <%= yield %>
   </body>
 </html>
