Adds links between posts & folders

--- a/app/views/folders/index.html.erb
+++ b/app/views/folders/index.html.erb
@@ -4,8 +4,7 @@
 
 <div id="folders">
   <% @folders.each do |folder| %>
-    <%= render folder %>
-    <%= render folder.posts %>
+    <p><%= link_to folder.name, folder %></p>
   <% end %>
 </div>
 
