--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -16,7 +16,7 @@
 
   <p>
     <strong>Folder:</strong>
-    <%= post.folder.name %>
+    <%= link_to post.folder.name, post.folder %>
   </p>
 
 </div>
