--- a/app/views/folders/show.html.erb
+++ b/app/views/folders/show.html.erb
@@ -2,6 +2,10 @@
 
 <%= render @folder %>
 
+<% @folder.posts.each do |post| %>
+  <p><%= link_to post.title, post %></p>
+<% end %>
+
 <div>
   <%= link_to "Edit this folder", edit_folder_path(@folder) %> |
   <%= link_to "Back to folders", folders_path %>
