Reformats model pages

--- a/app/views/folders/_folder.html.erb
+++ b/app/views/folders/_folder.html.erb
@@ -1,7 +1,4 @@
 <div id="<%= dom_id folder %>">
-  <p>
-    <strong>Name:</strong>
-    <%= folder.name %>
-  </p>
+  <p><%= folder.name %></p>
 
 </div>
