--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,22 +1,15 @@
 <div id="<%= dom_id post %>">
   <p>
-    <strong>User:</strong>
-    <%= post.user.name %>
-  </p>
-
-  <p>
-    <strong>Title:</strong>
-    <%= post.title %>
-  </p>
-
-  <p>
-    <strong>Body:</strong>
-    <%= post.body %>
-  </p>
-
-  <p>
     <strong>Folder:</strong>
     <%= link_to post.folder.name, post.folder %>
   </p>
 
+  <h2><%= post.title %></h2>
+
+  <%= post.body %>
+
+  <p>
+    <strong>Author:</strong>
+    <%= post.user.name %>
+  </p>
 </div>
