--- a/app/views/folders/index.html.erb
+++ b/app/views/folders/index.html.erb
@@ -3,9 +3,7 @@
 <h1>Folders</h1>
 
 <div id="folders">
-  <% @folders.each do |folder| %>
-    <p><%= link_to folder.name, folder %></p>
-  <% end %>
+  <%= render @folders %>
 </div>
 
 <%= link_to "New folder", new_folder_path %>
