--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
     <header><%= button_to "log in as admin", login_path %></header>
-    <main style="display:flex;">
+    <main>
       <%= yield %>
     </main>
   </body>
