--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -1,2 +1,13 @@
 // Entry point for your Sass build
 @import 'actiontext.css';
+
+.column-display {
+  display: flex;
+  turbo-frame {
+    border: 1px solid black;
+    flex-grow: 1;
+    &#post {
+      flex-grow: 4;
+    }
+  }
+}
