--- a/app/views/folders/index.html.erb
+++ b/app/views/folders/index.html.erb
@@ -1,16 +1,17 @@
 <p style="color: green"><%= notice %></p>
 
-<div id="folders" style="flex-grow:1;">
-  <h1>Folders</h1>
-  <%= render @folders %>
-  <%= link_to "✚", new_folder_path %>
-</div>
+<div class="column-display">
+  <turbo-frame id="folders">
+    <h1>Folders</h1>
+    <%= render @folders %>
+    <%= link_to "✚", new_folder_path %>
+  </turbo-frame>
 
-<div id="posts" style="flex-grow:1;">
-  <h1>Posts</h1>
-</div>
+  <turbo-frame id="posts">
+    <h1>Posts</h1>
+  </turbo-frame>
 
-<div id="post" style="flex-grow:4;">
-  <h1>Post</h1>
+  <turbo-frame id="post" target="_top">
+    <h1>Post</h1>
+  </turbo-frame>
 </div>
-
