Fixes login button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <header><%= button_to "log in as admin", login_path %></header>
+    <header><%= button_to "log in as admin", "sessions/create" %></header>
     <main>
       <%= yield %>
     </main>
