Removes unnecessary target

--- a/app/views/folders/index.html.erb
+++ b/app/views/folders/index.html.erb
@@ -11,7 +11,7 @@
     <h1>Posts</h1>
   </turbo-frame>
 
-  <turbo-frame id="post" target="_top">
+  <turbo-frame id="post">
     <h1>Post</h1>
   </turbo-frame>
 </div>
