--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,8 @@
 <h1>Editing post</h1>
 
-<%= render "form", post: @post %>
+<turbo-frame id="post">
+  <%= render "form", post: @post %>
+</turbo-frame>
 
 <br>
 
