--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,10 +1,5 @@
 <turbo-frame id="post">
   <%= render @post %>
-</turbo-frame>
-
-<div>
-  <%= link_to "Edit this post", edit_post_path(@post) %> |
-  <%= link_to "Back to posts", posts_path %>
-
+  <%= link_to "Edit this post", edit_post_path(@post) %>
   <%= button_to "Destroy this post", @post, method: :delete %>
-</div>
+</turbo-frame>
