--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -4,10 +4,11 @@
 .column-display {
   display: flex;
   turbo-frame {
+    padding: 10px;
     border: 1px solid black;
-    flex-grow: 1;
+    flex: 0 0 200px;
     &#post {
-      flex-grow: 4;
+      flex: 1 1 auto;
     }
   }
 }
