--- a/app/views/folders/_folder.html.erb
+++ b/app/views/folders/_folder.html.erb
@@ -1,3 +1,4 @@
-<div id="<%= dom_id folder %>">
-  <p><%= link_to folder.name, folder, data: {turbo_frame: "posts"} %></p>
+<div id="<%= dom_id folder %>" style="display:flex;justify-content:space-between;">
+  <%= link_to folder.name, folder, data: {turbo_frame: "posts"} %>
+  <%= button_to 'Destroy', folder, method: :delete, data: {turbo_confirm: 'Are you sure?'} %>
 </div>
