--- a/app/views/folders/show.html.erb
+++ b/app/views/folders/show.html.erb
@@ -1,14 +1,5 @@
 <turbo-frame id="posts">
   <h1><%= @folder.name %></h1>
 
-  <% @folder.posts.each do |post| %>
-    <p><%= link_to post.title, post, data: {turbo_frame: "post"} %></p>
-  <% end %>
+  <%= render @folder.posts %>
 </turbo-frame>
-
-<div>
-  <%= link_to "Edit this folder", edit_folder_path(@folder) %> |
-  <%= link_to "Back to folders", folders_path %>
-
-  <%= button_to "Destroy this folder", @folder, method: :delete %>
-</div>
