--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,4 +1,3 @@
 <div id="<%= dom_id post %>">
-  <h2><%= post.title %></h2>
-  <%= post.body %>
+  <p><%= link_to post.title, post, data: {turbo_frame: "post"} %></p>
 </div>
