--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,9 +1,5 @@
 <h1>New post</h1>
 
-<%= render "form", post: @post %>
-
-<br>
-
-<div>
-  <%= link_to "Back to posts", posts_path %>
-</div>
+<turbo-frame id="post">
+  <%= render "form", post: @post %>
+</turbo-frame>
