--- a/app/views/folders/show.html.erb
+++ b/app/views/folders/show.html.erb
@@ -2,4 +2,5 @@
   <h1><%= @folder.name %></h1>
 
   <%= render @folder.posts %>
+  <%= link_to "✚", new_post_path, data: {turbo_frame: "post"} %>
 </turbo-frame>
