Folder link updates both other frames

--- a/app/views/folders/_folder.html.erb
+++ b/app/views/folders/_folder.html.erb
@@ -1,4 +1,4 @@
 <div id="<%= dom_id folder %>" style="display:flex;justify-content:space-between;">
-  <%= link_to folder.name, folder, data: {turbo_frame: "posts"} %>
+  <%= link_to folder.name, folder, data: {turbo_stream: "true"} %>
   <%= button_to 'Destroy', folder, method: :delete, data: {turbo_confirm: 'Are you sure?'} %>
 </div>
