--- a/app/views/folders/show.html.erb
+++ b/app/views/folders/show.html.erb
@@ -1,6 +1,3 @@
 <turbo-frame id="posts">
-  <h1><%= @folder.name %></h1>
-
-  <%= render @folder.posts %>
-  <%= link_to "✚", new_post_path, data: {turbo_frame: "post"} %>
+  <%= render partial "posts"%>
 </turbo-frame>
