Uses modal frame for forms

--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -1,4 +1,4 @@
 <h1><%= @folder.name %></h1>
 
 <%= render @folder.posts %>
-<%= link_to "✚", new_post_path, data: {turbo_frame: "post"} %>
+<%= link_to "✚", new_post_path, data: {turbo_frame: "modal"} %>
