--- a/app/views/folders/_folders.html.erb
+++ b/app/views/folders/_folders.html.erb
@@ -1,3 +1,3 @@
 <h1>Folders</h1>
 <%= render @folders %>
-<%= link_to "✚", new_folder_path %>
+<%= link_to "✚", new_folder_path, data: {turbo_frame: "modal"} %>
