--- a/app/views/folders/new.html.erb
+++ b/app/views/folders/new.html.erb
@@ -1,4 +1,4 @@
-<turbo-frame id="folders">
+<turbo-frame id="modal">
   <h1>New folder</h1>
   <%= render "form", folder: @folder %>
 </turbo-frame>
