Updates post count on create & destroy

--- a/app/views/posts/create.turbo_stream.erb
+++ b/app/views/posts/create.turbo_stream.erb
@@ -2,3 +2,4 @@
 <%= turbo_stream.replace "post", template: "posts/show" %>
 <% @folder = @post.folder %>
 <%= turbo_stream.replace "posts", template: "folders/show" %>
+<%= turbo_stream.replace dom_id(@folder), partial: "folders/folder", locals: {folder: @folder} %>
