--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -1,9 +1,9 @@
 // Entry point for your Sass build
+@import "fluid.sass.scss";
 @import "variables.sass.scss";
 @import "actiontext.css";
-@import "nav.sass.scss";
-@import "headers.sass.scss";
+// @import "nav.sass.scss";
 @import "links_and_buttons.sass.scss";
-@import "tables.sass.scss";
+// @import "tables.sass.scss";
 @import "defaults.sass.scss";
 @import "column_layout.sass.scss";
