--- a/app/assets/stylesheets/variables.sass.scss
+++ b/app/assets/stylesheets/variables.sass.scss
@@ -7,10 +7,10 @@
   --mono-font: Consolas, Menlo, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
 
   /* Body font size. By default, effectively 18.4px, based on 16px as 'root em' */
-  --base-fontsize: 1.15rem;
+  // --base-fontsize: 1.15rem;
 
   /* Major third scale progression - see https://type-scale.com/ */
-  --header-scale: 1.25;
+  // --header-scale: 1.25;
 
   /* Line height is set to the "Golden ratio" for optimal legibility */
   --line-height: 1.618;
