Gets turbo_stream working & removes JSON

--- a/app/views/folders/index.html.erb
+++ b/app/views/folders/index.html.erb
@@ -1,15 +1,15 @@
 <p style="color: green"><%= notice %></p>
 
 <div class="column-display">
-  <turbo-frame id="folders">
+  <turbo-frame id="folder-list">
     <%= render "folders" %>
   </turbo-frame>
 
-  <turbo-frame id="posts">
+  <turbo-frame id="post-list">
     <h2>Posts</h2>
   </turbo-frame>
 
-  <turbo-frame id="post">
+  <turbo-frame id="post-detail">
     <h2>Post</h2>
   </turbo-frame>
 </div>
