--- a/app/views/folders/show.html.erb
+++ b/app/views/folders/show.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_stream_from @folder %>
 
-<turbo-frame id="posts">
+<turbo-frame id="post-list">
   <%= render partial: "posts" %>
 </turbo-frame>
