--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -4,4 +4,7 @@
   Add post
 <% end %>
 
-<%= render @folder.posts %>
+<%= turbo_stream_from @folder %>
+<div id="posts">
+  <%= render @folder.posts %>
+</div>
