--- a/app/views/posts/update.turbo_stream.erb
+++ b/app/views/posts/update.turbo_stream.erb
@@ -1,2 +1,2 @@
 <%= turbo_stream.update "modal", "" %>
-<%= turbo_stream.replace "post", template: "posts/show" %>
+<%= turbo_stream.replace "post-detail", template: "posts/show" %>
