--- a/app/views/folders/show.turbo_stream.erb
+++ b/app/views/folders/show.turbo_stream.erb
@@ -1,7 +1,7 @@
-<%= turbo_stream.update "posts", partial: "posts/posts" %>
+<%= turbo_stream.update "post-list", partial: "posts/posts" %>
 <% @post = @folder.posts&.first %>
 <% if @post %>
-  <%= turbo_stream.replace "post", template: "posts/show" %>
+  <%= turbo_stream.replace "post-detail", template: "posts/show" %>
 <% else %>
-  <%= turbo_stream.update "post", "" %>
+  <%= turbo_stream.update "post-detail", "" %>
 <% end %>
