--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,3 +1,3 @@
 <div id="<%= dom_id post %>">
-  <p><%= link_to post.title, post, data: {turbo_frame: "post"} %></p>
+  <p><%= link_to post.title, post, data: {turbo_frame: "post-detail"} %></p>
 </div>
