--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
       <%= button_to "log in as admin", "sessions/create" %>
     </header>
     <main>
+      <p style="color: green"><%= notice %></p>
       <%= yield %>
     </main>
   </body>
