Moves CSS into stylesheet

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -4,7 +4,8 @@
 // @import "actiontext.css";
 // @import "nav.sass.scss";
 @import "links_and_buttons.sass.scss";
-// @import "tables.sass.scss";
+@import "modal_form.sass.scss";
+@import "tables.sass.scss";
 @import "defaults.sass.scss";
 @import "column_layout.sass.scss";
 @import "rhino-editor/exports/styles/trix";
