--- a/app/views/shared/_modal_form.html.erb
+++ b/app/views/shared/_modal_form.html.erb
@@ -1,6 +1,6 @@
-<div aria-labelledby="modal-title" aria-modal="true"  role="dialog" style="position:fixed;inset:0px;z-index:50;overflow-y:auto;background-color: rgb(0 0 0 / 0.8);">
-  <div style="height:100vh;width:100%;position:relative;display:flex;align-items:center;justify-content:center;">
-    <div style="max-width:42rem;background-color: rgb(255 255 255 / 1);margin: 0.25rem;padding: 2rem;transform-origin: bottom;margin-left: auto;margin-right: auto;min-width: 600px;border-radius: 1rem;">
+<div aria-labelledby="modal-title" aria-modal="true"  role="dialog" class="modal-form">
+  <div class="modal-screen-background">
+    <div class="modal-form-background">
       <h2 id="modal-title"><%= modal_title %></h2>
       <%= yield %>
     </div>
