Gets cancel button working

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -28,6 +28,6 @@
 
   <div>
     <%= form.submit %>
-    <%= form.button "Cancel", type: :reset %>
+    <%= form.submit "Cancel" %>
   </div>
 <% end %>
