--- a/app/views/folders/show.turbo_stream.erb
+++ b/app/views/folders/show.turbo_stream.erb
@@ -1,4 +1,4 @@
-<%= turbo_stream.update "post-list", partial: "posts/posts" %>
+<%= turbo_stream.update "post-list", template: "folders/show" %>
 <% @post = @folder.posts&.first %>
 <% if @post %>
   <%= turbo_stream.replace "post-detail", template: "posts/show" %>
