--- a/app/views/homepage/show.html.erb
+++ b/app/views/homepage/show.html.erb
@@ -3,13 +3,8 @@
     <%= render template: "folders/index" %>
   </turbo-frame>
 
-  <turbo-frame id="post-list">
-    <h2>Posts</h2>
-  </turbo-frame>
-
-  <turbo-frame id="post-detail">
-    <h2>Post</h2>
-  </turbo-frame>
+  <turbo-frame id="post-list"></turbo-frame>
+  <turbo-frame id="post-detail"></turbo-frame>
 </div>
 
 <%= turbo_frame_tag :modal %>
