--- a/app/views/posts/create.turbo_stream.erb
+++ b/app/views/posts/create.turbo_stream.erb
@@ -1,5 +1,5 @@
 <%= turbo_stream.update "modal", "" %>
 <% if @post %>
   <%= turbo_stream.replace "post-detail", template: "posts/show" %>
-  <%= turbo_stream.update "post-list", partial: "posts/posts" %>
+  <%= turbo_stream.update "post-list", template: "posts/index" %>
 <% end %>
