Gets folder edit working

--- a/app/views/folders/edit.html.erb
+++ b/app/views/folders/edit.html.erb
@@ -1,3 +1,5 @@
-<%= render "shared/modal_form", modal_title: "Edit folder" do %>
-  <%= render "form", folder: @folder %>
-<% end %>
+<turbo-frame id="modal">
+  <%= render "shared/modal_form", modal_title: "Edit folder" do %>
+    <%= render "form", folder: @folder %>
+  <% end %>
+</turbo-frame>
