Corrects more issues with modals

--- a/app/views/folders/update.turbo_stream.erb
+++ b/app/views/folders/update.turbo_stream.erb
@@ -1,2 +1,2 @@
 <%= turbo_stream.update "modal", "" %>
-<%= turbo_stream.update "post-list", template: "posts/index" %>
+<%= turbo_stream.update "post-list", template: "folders/show" %>
