--- a/app/views/folders/create.turbo_stream.erb
+++ b/app/views/folders/create.turbo_stream.erb
@@ -1,2 +1,2 @@
 <%= turbo_stream.update("modal", "") %>
-<%= turbo_stream.update "post-list", template: "folders/show" %>
+<%= turbo_stream.update "post-list", template: "folders/show" if @folder %>
