--- a/app/views/folders/update.turbo_stream.erb
+++ b/app/views/folders/update.turbo_stream.erb
@@ -1,2 +1,3 @@
 <%= turbo_stream.update "modal", "" %>
 <%= turbo_stream.update "post-list", template: "folders/show" %>
+<%= turbo_stream.replace dom_id(@folder, :header), partial: "posts/post_header", locals: {folder: @folder} %>
