More Turbo corrections and tidying

--- a/app/views/posts/_post_header.html.erb
+++ b/app/views/posts/_post_header.html.erb
@@ -1,3 +1,3 @@
-<%= turbo_frame_tag dom_id(folder, :header) do %>
+<%= tag.div id: dom_id(folder, :header) do %>
   <h3>Folder: <%= folder.name %></h3>
 <% end %>
