--- a/app/views/folders/_form.html.erb
+++ b/app/views/folders/_form.html.erb
@@ -1,15 +1,5 @@
-<%= form_with(model: folder) do |form| %>
-  <% if folder.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(folder.errors.count, "error") %> prohibited this folder from being saved:</h2>
-
-      <ul>
-        <% folder.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%= form_with(model: folder, builder: RhinoFormBuilder) do |form| %>
+  <%= form.error_messages %>
 
   <div>
     <%= form.label :name, style: "display: block" %>
