--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Docbucket</title>
+    <title>DocBucket</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -12,7 +12,7 @@
 
   <body>
     <header>
-      <h1>Docbucket</h1>
+      <h1>DocBucket</h1>
       <%= button_to "log in as admin", "sessions/create" %>
     </header>
     <main>
